crates/keron-lang/tests/corpus/errors/parse/reconcile_chain_missing_head.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: unexpected `>`, expected expression
  --> 2:12
  |
2 | reconcile -> a
  |            ^
  = help: write an expression (literal, name, call, or `(…)`).
